--- a/src/main/resources/view/main.fxml
+++ b/src/main/resources/view/main.fxml
@@ -3,14 +3,16 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaige.smartfridge.Controller">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="snaige.smartfridge.Controller">
   <tabs>
     <Tab text="Sensor Summary">
          <content>
@@ -34,7 +36,6 @@
                         <Label fx:id="lowerLabel" text="" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <Label text="Freezer:" GridPane.rowIndex="2" />
                         <Label fx:id="freezerLabel" text="" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Button mnemonicParsing="false" onAction="#dynamicUpdate" text="Start" GridPane.rowIndex="3" />
                      </children>
                      <padding>
                         <Insets left="10.0" />
@@ -45,9 +46,32 @@
          </content>
     </Tab>
     <Tab text="Contols">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-      </content>
+         <content>
+            <GridPane>
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Upper Section" />
+                  <Label text="Lower Section" GridPane.rowIndex="1" />
+                  <Label text="Freezer" GridPane.rowIndex="2" />
+                  <Button fx:id="btnSave" mnemonicParsing="false" onAction="#applySettings" text="Save" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                  <Slider fx:id="cpUpperInput" blockIncrement="0.5" majorTickUnit="1.0" max="10.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" value="5.0" GridPane.columnIndex="1" />
+                  <Slider fx:id="cpLowerInput" blockIncrement="0.5" majorTickUnit="1.0" max="10.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" value="2.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Slider fx:id="cpFreezerInput" blockIncrement="0.5" majorTickUnit="1.0" max="0.0" min="-10.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" value="-3.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               </children>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </GridPane>
+         </content>
     </Tab>
       <Tab text="Scheduler">
         <content>
@@ -55,9 +79,9 @@
         </content>
       </Tab>
       <Tab text="History">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-        </content>
+         <content>
+            <TableView fx:id="historyTable" prefHeight="200.0" prefWidth="200.0" />
+         </content>
       </Tab>
   </tabs>
 </TabPane>
