--- a/src/main/resources/view/login.fxml
+++ b/src/main/resources/view/login.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0"
-          prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
+          prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1"
+          fx:controller="snaige.smartfridge.controllers.LoginController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
     </columnConstraints>
@@ -24,7 +25,8 @@
             <children>
                 <Button mnemonicParsing="false" text="Register" GridPane.columnIndex="1" GridPane.halignment="CENTER"
                         GridPane.valignment="CENTER"/>
-                <Button mnemonicParsing="false" text="Login" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+                <Button mnemonicParsing="false" onAction="#login" text="Login" GridPane.halignment="CENTER"
+                        GridPane.valignment="CENTER"/>
             </children>
         </GridPane>
         <GridPane>
@@ -39,14 +41,15 @@
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity"/>
             </rowConstraints>
             <children>
-                <TextField prefHeight="22.0" prefWidth="285.0" GridPane.columnIndex="1" GridPane.valignment="CENTER">
+                <TextField fx:id="loginTF" prefHeight="22.0" prefWidth="285.0" GridPane.columnIndex="1"
+                           GridPane.valignment="CENTER">
                     <GridPane.margin>
                         <Insets bottom="5.0" top="5.0"/>
                     </GridPane.margin>
                 </TextField>
                 <Label text="Username:" GridPane.halignment="LEFT" GridPane.valignment="CENTER"/>
                 <Label text="Password:" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER"/>
-                <PasswordField GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <PasswordField fx:id="passwordTF" GridPane.columnIndex="1" GridPane.rowIndex="2">
                     <GridPane.margin>
                         <Insets bottom="5.0" top="5.0"/>
                     </GridPane.margin>
