--- a/src/main/resources/view/login.fxml
+++ b/src/main/resources/view/login.fxml
@@ -3,8 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0"
-          prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1"
+<GridPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+          prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.60"
           fx:controller="snaige.smartfridge.controllers.LoginController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
@@ -23,7 +23,8 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             </rowConstraints>
             <children>
-                <Button mnemonicParsing="false" text="Register" GridPane.columnIndex="1" GridPane.halignment="CENTER"
+                <Button mnemonicParsing="false" onAction="#switchToRegister" text="Register" GridPane.columnIndex="1"
+                        GridPane.halignment="CENTER"
                         GridPane.valignment="CENTER"/>
                 <Button mnemonicParsing="false" onAction="#login" text="Login" GridPane.halignment="CENTER"
                         GridPane.valignment="CENTER"/>
